--- a/Form Validation/practice.html
+++ b/Form Validation/practice.html
@@ -1,39 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Matrimonial Biodata</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="container">
-        <form  id="form" action="/">
-            <h1>Registration</h1>
-            <div class="input-control">
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username" required>
-                <div class="error"></div>
-            </div>
-            <div class="input-control">
-                <label for="email">Email</label>
-                <input type="text" id="email" name="email" required>
-                <div class="error"></div>
-            </div>
-            <div class="input-control">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
-                <div class="error"></div>
-            </div>
-            <div class="input-control">
-                <label for="password">Password again </label>
-                <input type="password" id="password2" name="password2" required>
-                <div class="error"></div>
-            </div>
-            <button type="submit">Sign in </button>
+  <div class="container">
+    <form id="biodata-form" action="/">
+      <h1>Matrimonial Biodata</h1>
 
-        </form>
-    </div>
-    <script src="practice.js"></script>
+      <div class="input-control">
+        <label for="fullName">Full Name</label>
+        <input type="text" id="fullName" name="fullName" required />
+        <div class="error"></div>
+      </div>
+
+      <div class="input-control">
+        <label for="email">Email</label>
+        <input type="text" id="email" name="email" required />
+        <div class="error"></div>
+      </div>
+
+      <div class="input-control">
+        <label for="dob">Date of Birth</label>
+        <input type="date" id="dob" name="dob" required />
+        <div class="error"></div>
+      </div>
+
+      <div class="input-control">
+        <label for="gender">Gender</label>
+        <select id="gender" name="gender" required>
+          <option value="">-- Select --</option>
+          <option value="Male">Male</option>
+          <option value="Female">Female</option>
+          <option value="Other">Other</option>
+        </select>
+        <div class="error"></div>
+      </div>
+
+      <div class="input-control">
+        <label for="marital">Marital Status</label>
+        <select id="marital" name="marital" required>
+          <option value="">-- Select --</option>
+          <option value="Unmarried">Unmarried</option>
+          <option value="Divorced">Divorced</option>
+          <option value="Widowed">Widowed</option>
+        </select>
+        <div class="error"></div>
+      </div>
+
+      <div class="input-control">
+        <label for="blood">Blood Group</label>
+        <select id="blood" name="blood" required>
+          <option value="">-- Select --</option>
+          <option value="A+">A+</option>
+          <option value="A-">A-</option>
+          <option value="B+">B+</option>
+          <option value="B-">B-</option>
+          <option value="AB+">AB+</option>
+          <option value="AB-">AB-</option>
+          <option value="O+">O+</option>
+          <option value="O-">O-</option>
+        </select>
+        <div class="error"></div>
+      </div>
+
+      <div class="input-control">
+        <label for="height">Height (cm)</label>
+        <input type="number" id="height" name="height" required />
+        <div class="error"></div>
+      </div>
+
+      <div class="input-control">
+        <label for="color">Body Color</label>
+        <select id="color" name="color" required>
+          <option value="">-- Select --</option>
+          <option value="Fair">Fair</option>
+          <option value="Medium">Medium</option>
+          <option value="Dark">Dark</option>
+        </select>
+        <div class="error"></div>
+      </div>
+
+      <div class="input-control">
+        <label for="family">Family Members</label>
+        <input type="number" id="family" name="family" required />
+        <div class="error"></div>
+      </div>
+
+      <div class="input-control">
+        <label for="education">Education</label>
+        <input type="text" id="education" name="education" required />
+        <div class="error"></div>
+      </div>
+
+      <div class="input-control">
+        <label for="profession">Profession</label>
+        <input type="text" id="profession" name="profession" required />
+        <div class="error"></div>
+      </div>
+
+      <div class="input-control">
+        <label for="language">Languages Known</label>
+        <input type="text" id="language" name="language" placeholder="e.g., Bengali, English" required />
+        <div class="error"></div>
+      </div>
+
+      <div class="input-control">
+        <label for="hobby">Hobbies</label>
+        <input type="text" id="hobby" name="hobby" placeholder="e.g., Reading, Music, Traveling" required />
+        <div class="error"></div>
+      </div>
+
+      <div class="input-control">
+        <label for="nationality">Nationality</label>
+        <input type="text" id="nationality" name="nationality" required />
+        <div class="error"></div>
+      </div>
+
+      <div class="input-control">
+        <label for="address">Address</label>
+        <input type="text" id="address" name="address" required />
+        <div class="error"></div>
+      </div>
+
+      <div class="input-control">
+        <label for="phone">Phone Number</label>
+        <input type="text" id="phone" name="phone" required />
+        <div class="error"></div>
+      </div>
+
+      <button type="submit">Submit Biodata</button>
+    </form>
+  </div>
+
+  <script src="practice.js"></script>
 </body>
 </html>
